Fix alignment

--- a/TheatreCMS/Content/Site.css
+++ b/TheatreCMS/Content/Site.css
@@ -1695,16 +1695,16 @@ textarea {
 
     .archive-input-container {
         margin: 0 auto;
-        width: 1200px;
+        width: 1050px;
         position: relative;
 
     }
     
     .archive-input-container input[type="text"]{
-        width: 67.5%;
+        width: 76.2%;
         height: 50px;
         padding: 12px 20px 12px 20px;
-        margin: 8px 8px 8px 200px;
+        margin: 8px 0px 8px 200px;
         font-size: 20px;
         border: 1px solid var(--light-color);
         outline: none;
@@ -1721,7 +1721,7 @@ textarea {
         color: var(--light-color);
         text-align: center;
         position: absolute;
-        right: 1000px;
+        right: 850px;
         top: 8px;
         border: 1px solid var(--light-color);
         border-right: 0px;
@@ -1742,7 +1742,7 @@ textarea {
         color: var(--dark-color);
         text-align: center;
         position: absolute;
-        right: 140px;
+        right: 0px;
         top: 8px;
         border-radius: 0px 10px 10px 0px;
     }
